_generated-doc/3.15/config/quarkus-core_quarkus.native.adoc
:summaryTableId: quarkus-core_quarkus-native
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[.header-title]##Configuration property##
h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-native-enabled]] [.property-path]##link:#quarkus-core_quarkus-native-enabled[`quarkus.native.enabled`]##

[.description]
--
Set to enable native-image building using GraalVM.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_NATIVE_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_NATIVE_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-native-sources-only]] [.property-path]##link:#quarkus-core_quarkus-native-sources-only[`quarkus.native.sources-only`]##

[.description]
--
Set to prevent the native-image process from actually building the native image.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_NATIVE_SOURCES_ONLY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_NATIVE_SOURCES_ONLY+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-native-additional-build-args]] [.property-path]##link:#quarkus-core_quarkus-native-additional-build-args[`quarkus.native.additional-build-args`]##

[.description]
--
Comma-separated, additional arguments to pass to the build process. If an argument includes the `,` symbol, it needs to be escaped, e.g. `++\\++,`


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_NATIVE_ADDITIONAL_BUILD_ARGS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_NATIVE_ADDITIONAL_BUILD_ARGS+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-native-enable-http-url-handler]] [.property-path]##link:#quarkus-core_quarkus-native-enable-http-url-handler[`quarkus.native.enable-http-url-handler`]##

[.description]
--
If the HTTP url handler should be enabled, allowing you to do URL.openConnection() for HTTP URLs


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_NATIVE_ENABLE_HTTP_URL_HANDLER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_NATIVE_ENABLE_HTTP_URL_HANDLER+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`true`

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-native-enable-https-url-handler]] [.property-path]##link:#quarkus-core_quarkus-native-enable-https-url-handler[`quarkus.native.enable-https-url-handler`]##

[.description]
--
If the HTTPS url handler should be enabled, allowing you to do URL.openConnection() for HTTPS URLs


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_NATIVE_ENABLE_HTTPS_URL_HANDLER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_NATIVE_ENABLE_HTTPS_URL_HANDLER+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-native-headless]] [.property-path]##link:#quarkus-core_quarkus-native-headless[`quarkus.native.headless`]##

[.description]
--
The default value for java.awt.headless JVM option. Switching this option affects linking of awt libraries.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_NATIVE_HEADLESS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_NATIVE_HEADLESS+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`true`

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-native-file-encoding]] [.property-path]##link:#quarkus-core_quarkus-native-file-encoding[`quarkus.native.file-encoding`]##

[.description]
--
Defines the file encoding as in `-Dfile.encoding=...`. Native image runtime uses the host's (i.e. build time) value of `file.encoding` system property. We intentionally default this to UTF-8 to avoid platform specific defaults to be picked up which can then result in inconsistent behavior in the generated native executable.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_NATIVE_FILE_ENCODING+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_NATIVE_FILE_ENCODING+++`
endif::add-copy-button-to-env-var[]
--
|string
|`UTF-8`

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-native-add-all-charsets]] [.property-path]##link:#quarkus-core_quarkus-native-add-all-charsets[`quarkus.native.add-all-charsets`]##

[.description]
--
If all character sets should be added to the native executable.

Note that some extensions (e.g. the Oracle JDBC driver) also take this setting into account to enable support for all charsets at the extension level.

This increases image size.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_NATIVE_ADD_ALL_CHARSETS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_NATIVE_ADD_ALL_CHARSETS+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-native-graalvm-home]] [.property-path]##link:#quarkus-core_quarkus-native-graalvm-home[`quarkus.native.graalvm-home`]##

[.description]
--
The location of the Graal distribution


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_NATIVE_GRAALVM_HOME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_NATIVE_GRAALVM_HOME+++`
endif::add-copy-button-to-env-var[]
--
|string
|`${GRAALVM_HOME:}`

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-native-java-home]] [.property-path]##link:#quarkus-core_quarkus-native-java-home[`quarkus.native.java-home`]##

[.description]
--
The location of the JDK


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_NATIVE_JAVA_HOME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_NATIVE_JAVA_HOME+++`
endif::add-copy-button-to-env-var[]
--
|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/io/File.html[File]
|`${java.home}`

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-native-native-image-xmx]] [.property-path]##link:#quarkus-core_quarkus-native-native-image-xmx[`quarkus.native.native-image-xmx`]##

[.description]
--
The maximum Java heap to be used during the native image generation


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_NATIVE_NATIVE_IMAGE_XMX+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_NATIVE_NATIVE_IMAGE_XMX+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-native-debug-build-process]] [.property-path]##link:#quarkus-core_quarkus-native-debug-build-process[`quarkus.native.debug-build-process`]##

[.description]
--
If the native image build should wait for a debugger to be attached before running. This is an advanced option and is generally only intended for those familiar with GraalVM internals


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_NATIVE_DEBUG_BUILD_PROCESS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_NATIVE_DEBUG_BUILD_PROCESS+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-native-publish-debug-build-process-port]] [.property-path]##link:#quarkus-core_quarkus-native-publish-debug-build-process-port[`quarkus.native.publish-debug-build-process-port`]##

[.description]
--
If the debug port should be published when building with docker and debug-build-process is true


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_NATIVE_PUBLISH_DEBUG_BUILD_PROCESS_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_NATIVE_PUBLISH_DEBUG_BUILD_PROCESS_PORT+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`true`

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-native-enable-isolates]] [.property-path]##link:#quarkus-core_quarkus-native-enable-isolates[`quarkus.native.enable-isolates`]##

[.description]
--
If isolates should be enabled


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_NATIVE_ENABLE_ISOLATES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_NATIVE_ENABLE_ISOLATES+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`true`

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-native-enable-fallback-images]] [.property-path]##link:#quarkus-core_quarkus-native-enable-fallback-images[`quarkus.native.enable-fallback-images`]##

[.description]
--
If a JVM based 'fallback image' should be created if native image fails. This is not recommended, as this is functionally the same as just running the application in a JVM


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_NATIVE_ENABLE_FALLBACK_IMAGES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_NATIVE_ENABLE_FALLBACK_IMAGES+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-native-auto-service-loader-registration]] [.property-path]##link:#quarkus-core_quarkus-native-auto-service-loader-registration[`quarkus.native.auto-service-loader-registration`]##

[.description]
--
If all META-INF/services entries should be automatically registered


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_NATIVE_AUTO_SERVICE_LOADER_REGISTRATION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_NATIVE_AUTO_SERVICE_LOADER_REGISTRATION+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-native-dump-proxies]] [.property-path]##link:#quarkus-core_quarkus-native-dump-proxies[`quarkus.native.dump-proxies`]##

[.description]
--
If the bytecode of all proxies should be dumped for inspection


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_NATIVE_DUMP_PROXIES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_NATIVE_DUMP_PROXIES+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-native-container-build]] [.property-path]##link:#quarkus-core_quarkus-native-container-build[`quarkus.native.container-build`]##

[.description]
--
If this build should be done using a container runtime. Unless container-runtime is also set, docker will be used by default. If docker is not available or is an alias to podman, podman will be used instead as the default.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_NATIVE_CONTAINER_BUILD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_NATIVE_CONTAINER_BUILD+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-native-pie]] [.property-path]##link:#quarkus-core_quarkus-native-pie[`quarkus.native.pie`]##

[.description]
--
Explicit configuration option to generate a native Position Independent Executable (PIE) for Linux. If the system supports PIE generation, the default behaviour is to disable it for link:https://www.redhat.com/en/blog/position-independent-executable-pie-performance[performance reasons]. However, some systems can only run position-independent executables, so this option enables the generation of such native executables.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_NATIVE_PIE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_NATIVE_PIE+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-native-march]] [.property-path]##link:#quarkus-core_quarkus-native-march[`quarkus.native.march`]##

[.description]
--
Generate instructions for a specific machine type. Defaults to `x86-64-v3` on AMD64 and `armv8-a` on AArch64. Use `compatibility` for best compatibility, or `native` for best performance if a native executable is deployed on the same machine or on a machine with the same CPU features. A list of all available machine types is available by executing `native-image -march=list`


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_NATIVE_MARCH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_NATIVE_MARCH+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-native-remote-container-build]] [.property-path]##link:#quarkus-core_quarkus-native-remote-container-build[`quarkus.native.remote-container-build`]##

[.description]
--
If this build is done using a remote docker daemon.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_NATIVE_REMOTE_CONTAINER_BUILD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_NATIVE_REMOTE_CONTAINER_BUILD+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-native-builder-image]] [.property-path]##link:#quarkus-core_quarkus-native-builder-image[`quarkus.native.builder-image`]##

[.description]
--
The docker image to use to do the image build. It can be one of `graalvm`, `mandrel`, or the full image path, e.g. `quay.io/quarkus/ubi-quarkus-mandrel-builder-image:jdk-21`.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_NATIVE_BUILDER_IMAGE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_NATIVE_BUILDER_IMAGE+++`
endif::add-copy-button-to-env-var[]
--
|string
|`mandrel`

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-native-builder-image-pull]] [.property-path]##link:#quarkus-core_quarkus-native-builder-image-pull[`quarkus.native.builder-image.pull`]##

[.description]
--
The strategy for pulling the builder image during the build.

Defaults to 'always', which will always pull the most up-to-date image; useful to keep up with fixes when a (floating) tag is updated.

Use 'missing' to only pull if there is no image locally; useful on development environments where building with out-of-date images is acceptable and bandwidth may be limited.

Use 'never' to fail the build if there is no image locally.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_NATIVE_BUILDER_IMAGE_PULL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_NATIVE_BUILDER_IMAGE_PULL+++`
endif::add-copy-button-to-env-var[]
--
a|tooltip:always[Always pull the most recent image.], tooltip:missing[Only pull the image if it's missing locally.], tooltip:never[Never pull any image; fail if the image is missing locally.]
|tooltip:always[Always pull the most recent image.]

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-native-container-runtime]] [.property-path]##link:#quarkus-core_quarkus-native-container-runtime[`quarkus.native.container-runtime`]##

[.description]
--
The container runtime (e.g. docker) that is used to do an image based build. If this is set then a container build is always done.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_NATIVE_CONTAINER_RUNTIME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_NATIVE_CONTAINER_RUNTIME+++`
endif::add-copy-button-to-env-var[]
--
a|`docker`, `docker-rootless`, `wsl`, `wsl-rootless`, `podman`, `podman-rootless`, `unavailable`
|

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-native-container-runtime-options]] [.property-path]##link:#quarkus-core_quarkus-native-container-runtime-options[`quarkus.native.container-runtime-options`]##

[.description]
--
Options to pass to the container runtime


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_NATIVE_CONTAINER_RUNTIME_OPTIONS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_NATIVE_CONTAINER_RUNTIME_OPTIONS+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-native-monitoring]] [.property-path]##link:#quarkus-core_quarkus-native-monitoring[`quarkus.native.monitoring`]##

[.description]
--
Enable monitoring various monitoring options. The value should be comma separated.

 - `jfr` for JDK flight recorder support
 - `jvmstat` for JVMStat support
 - `heapdump` for heampdump support
 - `jmxclient` for JMX client support (experimental)
 - `jmxserver` for JMX server support (experimental)
 - `all` for all monitoring features


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_NATIVE_MONITORING+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_NATIVE_MONITORING+++`
endif::add-copy-button-to-env-var[]
--
a|list of `heapdump`, `jvmstat`, `jfr`, `jmxserver`, `jmxclient`, `all`
|

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-native-enable-reports]] [.property-path]##link:#quarkus-core_quarkus-native-enable-reports[`quarkus.native.enable-reports`]##

[.description]
--
If the reports on call paths and included packages/classes/methods should be generated


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_NATIVE_ENABLE_REPORTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_NATIVE_ENABLE_REPORTS+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-native-report-exception-stack-traces]] [.property-path]##link:#quarkus-core_quarkus-native-report-exception-stack-traces[`quarkus.native.report-exception-stack-traces`]##

[.description]
--
If exceptions should be reported with a full stack trace


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_NATIVE_REPORT_EXCEPTION_STACK_TRACES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_NATIVE_REPORT_EXCEPTION_STACK_TRACES+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`true`

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-native-report-errors-at-runtime]] [.property-path]##link:#quarkus-core_quarkus-native-report-errors-at-runtime[`quarkus.native.report-errors-at-runtime`]##

[.description]
--
If errors should be reported at runtime. This is a more relaxed setting, however it is not recommended as it means your application may fail at runtime if an unsupported feature is used by accident. Note that the use of this flag may result in build time failures due to `ClassNotFoundException`s. Reason most likely being that the Quarkus extension already optimized it away or do not actually need it. In such cases you should explicitly add the corresponding dependency providing the missing classes as a dependency to your project.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_NATIVE_REPORT_ERRORS_AT_RUNTIME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_NATIVE_REPORT_ERRORS_AT_RUNTIME+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-native-reuse-existing]] [.property-path]##link:#quarkus-core_quarkus-native-reuse-existing[`quarkus.native.reuse-existing`]##

[.description]
--
Don't build a native image if it already exists. This is useful if you have already built an image and you want to use Quarkus to deploy it somewhere. Note that this is not able to detect if the existing image is outdated, if you have modified source or config and want a new image you must not use this flag.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_NATIVE_REUSE_EXISTING+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_NATIVE_REUSE_EXISTING+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-native-resources-includes]] [.property-path]##link:#quarkus-core_quarkus-native-resources-includes[`quarkus.native.resources.includes`]##

[.description]
--
A comma separated list of globs to match resource paths that should be added to the native image.

Use slash (`/`) as a path separator on all platforms. Globs must not start with slash.

By default, no resources are included.

Example: Given that you have `src/main/resources/ignored.png` and `src/main/resources/foo/selected.png` in your source tree and one of your dependency JARs contains `bar/some.txt` file, with the following configuration

```
quarkus.native.resources.includes = foo/**,bar/**/*.txt
```

the files `src/main/resources/foo/selected.png` and `bar/some.txt` will be included in the native image, while `src/main/resources/ignored.png` will not be included.

Supported glob features   Feature Description   `++*++` Matches a (possibly empty) sequence of characters that does not contain slash (`/`)   `++**++` Matches a (possibly empty) sequence of characters that may contain slash (`/`)   `?` Matches one character, but not slash   `++[++abc++]++` Matches one character given in the bracket, but not slash   `++[++a-z++]++` Matches one character from the range given in the bracket, but not slash   `++[++!abc++]++` Matches one character not named in the bracket; does not match slash   `++[++a-z++]++` Matches one character outside the range given in the bracket; does not match slash   `++{++one,two,three++}++` Matches any of the alternating tokens separated by comma; the tokens may contain wildcards, nested alternations and ranges   `++\++` The escape character

Note that there are three levels of escaping when passing this option via `application.properties`:

 . `application.properties` parser
 - MicroProfile Config list converter that splits the comma separated list
 - Glob parser  All three levels use backslash (`++\++`) as the escaping character. So you need to use an appropriate number of backslashes depending on which level you want to escape.

Note that Quarkus extensions typically include the resources they require by themselves. This option is useful in situations when the built-in functionality is not sufficient.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_NATIVE_RESOURCES_INCLUDES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_NATIVE_RESOURCES_INCLUDES+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-native-resources-excludes]] [.property-path]##link:#quarkus-core_quarkus-native-resources-excludes[`quarkus.native.resources.excludes`]##

[.description]
--
A comma separated list of globs to match resource paths that should *not* be added to the native image.

Use slash (`/`) as a path separator on all platforms. Globs must not start with slash.

Please refer to `includes` for details about the glob syntax.

By default, no resources are excluded.

Example: Given that you have `src/main/resources/red.png` and `src/main/resources/foo/green.png` in your source tree and one of your dependency JARs contains `bar/blue.png` file, with the following configuration

```
quarkus.native.resources.includes = **/*.png
quarkus.native.resources.excludes = foo/**,**/green.png
```

the resource `red.png` will be available in the native image while the resources `foo/green.png` and `bar/blue.png` will not be available in the native image.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_NATIVE_RESOURCES_EXCLUDES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_NATIVE_RESOURCES_EXCLUDES+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-native-debug-enabled]] [.property-path]##link:#quarkus-core_quarkus-native-debug-enabled[`quarkus.native.debug.enabled`]##

[.description]
--
If debug is enabled and debug symbols are generated. The symbols will be generated in a separate .debug file.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_NATIVE_DEBUG_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_NATIVE_DEBUG_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-native-enable-dashboard-dump]] [.property-path]##link:#quarkus-core_quarkus-native-enable-dashboard-dump[`quarkus.native.enable-dashboard-dump`]##

[.description]
--
Generate the report files for GraalVM Dashboard.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_NATIVE_ENABLE_DASHBOARD_DUMP+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_NATIVE_ENABLE_DASHBOARD_DUMP+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-native-include-reasons-in-config-files]] [.property-path]##link:#quarkus-core_quarkus-native-include-reasons-in-config-files[`quarkus.native.include-reasons-in-config-files`]##

[.description]
--
Include a reasons entries in the generated json configuration files.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_NATIVE_INCLUDE_REASONS_IN_CONFIG_FILES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_NATIVE_INCLUDE_REASONS_IN_CONFIG_FILES+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-native-compression-level]] [.property-path]##link:#quarkus-core_quarkus-native-compression-level[`quarkus.native.compression.level`]##

[.description]
--
The compression level in ++[++1, 10++]++. 10 means _best_.

Higher compression level requires more time to compress the executable.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_NATIVE_COMPRESSION_LEVEL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_NATIVE_COMPRESSION_LEVEL+++`
endif::add-copy-button-to-env-var[]
--
|int
|

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-native-compression-additional-args]] [.property-path]##link:#quarkus-core_quarkus-native-compression-additional-args[`quarkus.native.compression.additional-args`]##

[.description]
--
Allows passing extra arguments to the UPX command line (like --brute). The arguments are comma-separated. The exhaustive list of parameters can be found in link:https://github.com/upx/upx/blob/devel/doc/upx.pod[https://github.com/upx/upx/blob/devel/doc/upx.pod].


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_NATIVE_COMPRESSION_ADDITIONAL_ARGS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_NATIVE_COMPRESSION_ADDITIONAL_ARGS+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-native-agent-configuration-apply]] [.property-path]##link:#quarkus-core_quarkus-native-agent-configuration-apply[`quarkus.native.agent-configuration-apply`]##

[.description]
--
Configuration files generated by the Quarkus build, using native image agent, are informative by default. In other words, the generated configuration files are presented in the build log but are not applied. When this option is set to true, generated configuration files are applied to the native executable building process.

Enabling this option should be done with care, because it can make native image configuration and/or behaviour dependant on other non-obvious factors. For example, if the native image agent generated configuration was generated from running JVM unit tests, disabling test(s) can result in a different native image configuration being generated, which in turn can misconfigure the native executable or affect its behaviour in unintended ways.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_NATIVE_AGENT_CONFIGURATION_APPLY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_NATIVE_AGENT_CONFIGURATION_APPLY+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

|===


:!summaryTableId: